# phone-quickcheck

./: LICENSE  README.md  phone-qcheck.cabal  stack.yaml
src/: Phone.hs
tests/: tests.hs
