name:                phone-qcheck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/k-bx/phone-qcheck#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Phone

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , QuickCheck
                     , phone-qcheck
                     , hspec
  default-language:    Haskell2010
